# GRPC

./: readme.txt
.github/workflows/: c-cpp.yml
grpc asynchronous/grpc_unary/client/: client.cpp  client.h
grpc asynchronous/grpc_unary/server/: server.cpp  server.h
grpc asynchronous/grpc_unary_generalized/: CMakeLists.txt
grpc asynchronous/grpc_unary_generalized/client/: CMakeLists.txt  client.cpp  client.h
grpc asynchronous/grpc_unary_generalized/protos/: mx.proto
grpc asynchronous/grpc_unary_generalized/server/: CMakeLists.txt  calldata_interface.h  server.cpp  server.h
grpc synchronous/grpc_basic/: CMakeLists.txt  client.cpp  client.h  mx.proto  server.cpp  server.h
grpc synchronous/grpc_bidirectional_stream/: CMakeLists.txt
grpc synchronous/grpc_bidirectional_stream/client/: CMakeLists.txt  chatclient.cpp  chatclient.h
grpc synchronous/grpc_bidirectional_stream/protos/: chat.proto
grpc synchronous/grpc_bidirectional_stream/server/: CMakeLists.txt  chatserver.cpp  chatserver.h
grpc synchronous/grpc_server_stream/: CMakeLists.txt  common.cmake
grpc synchronous/grpc_server_stream/client/: CMakeLists.txt  client.cpp  client.h
grpc synchronous/grpc_server_stream/protos/: mx.proto
grpc synchronous/grpc_server_stream/server/: CMakeLists.txt  server.cpp  server.h
grpc synchronous/grpc_unary/client/: client.cpp  client.h
grpc synchronous/grpc_unary/server/: CMakeLists.txt  server.cpp  server.h
